# cnn2025_ws

./: .gitignore  frames.gv
devel/: .catkin  .rosinstall  _setup_util.py  setup.fish  setup.sh
devel/lib/pkgconfig/: ai_perception.pc  bringup.pc  interface.pc  localization.pc  monitoring.pc  navigation.pc  realsense2_camera.pc  realsense2_description.pc  rslidar_sdk.pc  sensors.pc  sync.pc
devel/lib/rslidar_sdk/: rslidar_sdk_node
devel/share/ai_perception/cmake/: ai_perceptionConfig.cmake
devel/share/bringup/cmake/: bringupConfig.cmake
devel/share/interface/cmake/: interfaceConfig.cmake
devel/share/localization/cmake/: localizationConfig.cmake
devel/share/monitoring/cmake/: monitoringConfig.cmake
devel/share/navigation/cmake/: navigationConfig.cmake
devel/share/realsense2_camera/cmake/: realsense2_camera-msg-extras.cmake  realsense2_camera-msg-paths.cmake  realsense2_cameraConfig.cmake
devel/share/rslidar_sdk/cmake/: rslidar_sdkConfig.cmake
src/ai_perception/: CMakeLists.txt  package.xml
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: camera.yaml  lidar_sensor.yaml
src/bringup/launch/: camera.launch  camera_slam.launch  lidar_sensor.launch  rtabmap_lidar.launch  sensors.launch
src/bringup/rviz/: camera.rviz  lidar.rviz
src/interface/: CMakeLists.txt  package.xml
src/localization/: CMakeLists.txt  package.xml
src/monitoring/: CMakeLists.txt
src/navigation/: CMakeLists.txt
src/rslidar_sdk/: package.xml
src/sensors/: CMakeLists.txt  camera_node.py  lidar_node.py
src/sync/: CMakeLists.txt  package.xml
(+5 files in other folders)
