<?xml version="1.0"?>
<package format="2">
  <name>rslidar_sdk</name>
  <version>1.5.1</version>
  <description>RoboSense LiDAR SDK ROS wrapper</description>

  <maintainer email="support@robosense.ai">RoboSense</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>

</package>
